--- a/views/partials/restricted/common/weartest/list.html
+++ b/views/partials/restricted/common/weartest/list.html
@@ -31,6 +31,11 @@
                                         Product Test
                                     </a>
                                 </th>
+								<th class="span2">
+                                    <a href="" data-ng-class="{sort: isSortOrder('rating'), 'up': isSortOrder('rating', 'ascending')}" data-ng-click="setSortOrder('rating')">
+                                        Rating
+                                    </a>
+                                </th>
                                 <th>
                                     <a href="" data-ng-class="{'sort': isSortOrder('registrationStart'), 'up': isSortOrder('registrationStart', 'ascending')}" data-ng-click="setSortOrder('registrationStart')">
                                         Reg Dates
@@ -87,6 +92,9 @@
                                             Dashboard <i class="icon-chevron-right icon-white"></i>
                                         </a>
                                     </p>
+                                </td>
+								 <td id="raging">
+                                    <span data-once-text="weartest.rating"></span>
                                 </td>
                                 <td>
                                     <strong>Start:</strong><br/>
@@ -210,3 +218,10 @@
         <button type="button" class="btn btn-danger" ng-click="deleteWeartest()">Delete</button>
     </div>
 </div>
+<script>
+	//var raging = 0;
+	if($("#raging") < 0){
+		//rating = 10;
+		$("#rating") = 10;
+	}
+</script>
